--- a/style/header.css
+++ b/style/header.css
@@ -2,7 +2,7 @@
     width: 24px;
     height: 24px;
     display: inline-block;
-    background-image: url("Menu.svg");
+    background-image: url("cabeçalho__menu-hamburguer");
     background-repeat: no-repeat;
     background-position: center;
 }
